# tsri

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
codegen/: definitions.py  generate.py  helpers.py  minifier.py  todo.txt
codegen/templates/: enumerated_values.jinja2  field.jinja2  peripheral.jinja2  register.jinja2
codegen/templates_OLD/: field.jinja2  peripheral.jinja2  register.jinja2
examples/rp2040/: .gitignore  CMakeLists.txt  blink.cpp  build.sh  rp2040.svd
include/tsri/: test.cpp  tsri.hpp
include/tsri/fields/: bit_position_container.hpp  field.hpp  field_base.hpp  field_types.hpp  value_container.hpp
include/tsri/registers/: register_base.hpp  register_read_only.hpp  register_read_write.hpp  register_write_base.hpp  register_write_only.hpp
include/tsri/utility/: bit_manipulation.hpp  concepts.hpp  inline_macro.hpp  type_map.hpp  types.hpp
